# SLedgeplasma

./: README.md
A_isothermalmodel/: 1D_SOL_geometry_2500Els.msh  CMakeLists.txt  main.cpp
B_selfconsistenttemperature/: 1D_SOL_geometry_L100.msh  CMakeLists.txt  conservationenergy1D.h  conservationmassmomentum1D.h  conservationneutral1D.h  main.cpp  preprocess_1D_SOL.h
B_selfconsistenttemperature/results/: VerificationWith2PointModel.ipynb
B_selfconsistenttemperature/results/.ipynb_checkpoints/: Basic_2point_model-checkpoint.ipynb  ValidationWith2PointModel-checkpoint.ipynb
B_selfconsistenttemperature/results/q1.00e9/: M_q1.00e+09.vtu  N_fem_L100_mi2_Nu3_q1.00e9_onion.csv  N_q1.00e+09.vtu  Nn_q1.00e+09.vtu  T_fem_L100_mi2_Nu3_q1.00e9_onion.csv  T_q1.00e+09.vtu
B_selfconsistenttemperature/results/q1.02e8/: M_q1.02e+08.vtu  N_fem_L100_mi2_Nu3_q1.02e8_onion.csv  N_q1.02e+08.vtu  Nn_q1.02e+08.vtu  T_fem_L100_mi2_Nu3_q1.02e8_onion.csv  T_q1.02e+08.vtu
B_selfconsistenttemperature/results/q4.31e7/: M_q4.31e+07.vtu  N_fem_L100_mi2_Nu3_q4.31e7_onion.csv  N_q4.31e+07.vtu  Nn_q4.31e+07.vtu  T_fem_L100_mi2_Nu3_q4.31e7_onion.csv  T_q4.31e+07.vtu
Case01/: CMakeLists.txt  conservationenergy1D.h  main.cpp  preprocess_1D_SOL_case-01.h
Case02/: CMakeLists.txt  conservationenergy1D.h  conservationmassmomentum1D.h  main.cpp  notes.md  preprocess_1D_SOL_case-02.h  ratecoefficients.h
Case03/: CMakeLists.txt  conservationenergy1D.h  main.cpp  preprocess_1D_SOL_case-03.h  ratecoefficients.h  utilityfunctions.h
Case04/: CMakeLists.txt  conservationenergy1D.h  main.cpp  (+4 more)
(+25 files in other folders)
